<?xml version="1.0"?>
<package format="2">
  <name>gtest</name>
  <version>0.2.11</version>
  <description>Gtest Package</description>
  <maintainer email="levi.armstrong@swri.org">Levi Armstrong</maintainer>
  <license>Apache 2.0</license>

  <build_depend>git</build_depend>

  <export>
    <build_type>cmake</build_type>
  </export>

</package>
